--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Test Game</title>
 <body>
-    <div class="game-area">
+    <div id="game-area">
         <div id="tasks">
 
         </div>
