--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <title>Test Game</title>
 <body>
     <div id="game-area">
-        <div id="tasks">
-
-        </div>
+        <div id="skills"></div>
+        <div id="tasks"></div>
     </div>
 
     <script type="module" src="./build/game.js"></script>
