--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head></head>
-    <link rel="stylesheet" href="style.css" />
-    <title>Test Game</title>
+<link rel="stylesheet" href="style.css" />
+<title>Test Game</title>
+
 <body>
     <div id="game-area">
+        <div id="energy">
+            <span class="label">Energy</span>
+            <div class="progress-bar">
+                <div class="progress-fill"></div>
+                <span class="progress-value">100</span>
+            </div>
+        </div>
         <div id="skills"></div>
         <div id="tasks"></div>
     </div>
