Implement a tooltip system

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         </div>
     </div>
 
+    <div id="tooltip"></div>
+
     <script type="module" src="./build/game.js"></script>
     <script type="module" src="./build/tasks.js"></script>
 </body>
