--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
     <div id="tooltip"></div>
 
     <script type="module" src="./build/game.js"></script>
+    <script type="module" src="./build/simulation.js"></script>
+    <script type="module" src="./build/rendering.js"></script>
     <script type="module" src="./build/tasks.js"></script>
 </body>
