--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <div id="right-column">
                 <h2 id="zone-name">Lorem Ipsum</h2>
             </div>
+
+            <div id="items"></div>
         </div>
     </div>
 
