--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             </div>
             <div id="right-column">
                 <h2 id="zone-name">Lorem Ipsum</h2>
+                <h3 id="items-name">Items</h2>
                 <div id="items"></div>
+                <h3 id="perks-name">Perks</h2>
+                <div id="perks"></div>
             </div>
         </div>
     </div>
