Avoid weird look on refresh

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <title>Test Game</title>
 
 <body>
-    <div id="game-area">
+    <!-- Hidden until game's ready to render -->
+    <div id="game-area" style="display:none">
         <div id="top-bar">
             <div id="energy">
                 <span class="label">Energy</span>
