--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
             <p>Half your items will disappear.</p>
             <p>You keep all your Skills and Perks.</p>
             <button id="game-over-dismiss">Restart</button>
-            <h3>Skills gained:</h3>
+            <h3>Skills gained during run:</h3>
             <div id="game-over-skillgain"></div>
+            <h3 id="game-over-reset-count"></h3>
         </div>
     </div>
 
