End of content overlay

--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
         </div>
     </div>
 
+    <div id="end-of-content-overlay" style="display:none">
+        <div id="end-of-content-box">
+            <h2 id=>End of Content</h2>
+            <p>You've reached the end of all content that exists!</p>
+            <p>Congrats on winning the game. Fow now.</p>
+            <h3 id="end-of-content-reset-count"></h3>
+        </div>
+    </div>
+
     <script type="module" src="./build/game.js"></script>
     <script type="module" src="./build/simulation.js"></script>
     <script type="module" src="./build/rendering.js"></script>
