Lots of style polish

--- a/index.html
+++ b/index.html
@@ -25,15 +25,19 @@
             </div>
             <div id="right-column">
                 <h2 id="zone-name">Lorem Ipsum</h2>
-                <h3 id="items-name">Items</h2>
-                <div id="items"></div>
-                <h3 id="perks-name">Perks</h2>
-                <div id="perks"></div>
+                <div id="items">
+                    <h3 id="items-name">Items</h3>
+                    <div id="items-list"></div>
+                </div>
+                <div id="perks">
+                    <h3 id="perks-name">Perks</h3>
+                    <div id="perks-list"></div>
+                </div>
             </div>
         </div>
     </div>
 
-    <div id="tooltip"></div>
+    <div id="tooltip" style="display:none"></div>
     <div id="game-over-overlay" style="display:none">
         <div id="game-over-box">
             <h2 id=>Game Over</h2>
