Yet more style tweaks

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="game-area" style="display:none">
         <div id="top-bar">
             <div id="energy">
-                <span class="label">Energy</span>
+                <span class="label"></span>
                 <div class="progress-bar">
                     <div class="progress-fill"></div>
                     <span class="progress-value">100</span>
