--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
 <body>
     <!-- Hidden until game's ready to render -->
     <div id="game-area" style="display:none">
-        <div id="top-bar">
-            <div id="energy">
-                <span class="label"></span>
-                <div class="progress-bar">
-                    <div class="progress-fill"></div>
-                    <span class="progress-value">100</span>
+        <div id="top-area">
+            <div id="top-bar">
+                <div id="energy">
+                    <span class="label"></span>
+                    <div class="progress-bar">
+                        <div class="progress-fill"></div>
+                        <span class="progress-value">100</span>
+                    </div>
                 </div>
+                <div id="skills"></div>
             </div>
-            <div id="skills"></div>
+
+            <div id="settings-area">
+                <button id="open-settings">⚙</button>
+            </div>
         </div>
 
         <div id="play-area">
@@ -57,6 +63,14 @@
             <p>You've reached the end of all content that exists!</p>
             <p>Congrats on winning the game. Fow now.</p>
             <h3 id="end-of-content-reset-count"></h3>
+        </div>
+    </div>
+
+    <div id="settings-overlay" style="display:none">
+        <div id="settings">
+            <button id="close-settings">X</button>
+            <button id="save">Save</button>
+            <button id="load">Load</button>
         </div>
     </div>
 
