Reduced some CSS duplication

--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
                 </div>
                 <div id="right-column">
                     <h2 id="zone-name">Lorem Ipsum</h2>
-                    <div id="items">
-                        <h3 id="items-name">Items</h3>
-                        <div id="items-list"></div>
+                    <div id="items" class="sidebar-section">
+                        <h3 class="section-name">Items</h3>
+                        <div id="items-list" class="elements-list"></div>
                     </div>
-                    <div id="perks">
-                        <h3 id="perks-name">Perks</h3>
-                        <div id="perks-list"></div>
+                    <div id="perks" class="sidebar-section">
+                        <h3 class="section-name">Perks</h3>
+                        <div id="perks-list" class="elements-list"></div>
                     </div>
                 </div>
             </div>
         </div>
 
         <div id="tooltip" style="display:none"></div>
-        <div id="game-over-overlay" style="display:none">
+        <div id="game-over-overlay" style="display:none" class="full-screen-overlay">
             <div id="game-over-box">
                 <h2 id=>Game Over</h2>
                 <p>You used up all your energy.</p>
@@ -59,7 +59,7 @@
             </div>
         </div>
 
-        <div id="end-of-content-overlay" style="display:none">
+        <div id="end-of-content-overlay" style="display:none" class="full-screen-overlay">
             <div id="end-of-content-box">
                 <h2 id=>End of Content</h2>
                 <p>You've reached the end of all content that exists!</p>
@@ -68,7 +68,7 @@
             </div>
         </div>
 
-        <div id="settings-overlay" style="display:none">
+        <div id="settings-overlay" style="display:none" class="full-screen-overlay">
             <div id="settings">
                 <button id="close-settings">X</button>
                 <button id="save">Save</button>
