--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                 </div>
                 <div id="right-column">
                     <h2 id="zone-name">Lorem Ipsum</h2>
+                    <div id="controls" class="sidebar-section">
+                        <h3 class="section-name">Controls</h3>
+                        <div id="controls-list" class="elements-list"></div>
+                    </div>
                     <div id="items" class="sidebar-section">
                         <h3 class="section-name">Items</h3>
                         <div id="items-list" class="elements-list"></div>
