--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
                     </div>
                     <div id="items" class="sidebar-section">
                         <h3 class="section-name">Items</h3>
+                        <h3 class="section-info">?</h3>
                         <div id="items-list" class="elements-list"></div>
                     </div>
                     <div id="perks" class="sidebar-section">
                         <h3 class="section-name">Perks</h3>
+                        <h3 class="section-info">?</h3>
                         <div id="perks-list" class="elements-list"></div>
                     </div>
                 </div>
