Most zone 10 content

--- a/index.html
+++ b/index.html
@@ -91,5 +91,5 @@
     <script type="module" src="./build/game.js"></script>
     <script type="module" src="./build/simulation.js"></script>
     <script type="module" src="./build/rendering.js"></script>
-    <script type="module" src="./build/tasks.js"></script>
+    <script type="module" src="./build/zones.js"></script>
 </body>
