Mocking up attunement

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                     <div id="skills"></div>
                 </div>
 
-                <div id="settings-area">
+                <div id="right-top-area">
                     <button id="open-settings">⚙</button>
+                    <div id="attunement">Attunement: 1337</div>
                 </div>
             </div>
 
