--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
                 <div id="right-top-area">
                     <button id="open-settings">⚙</button>
-                    <div id="attunement">Attunement: 1337</div>
+                    <div id="attunement" class="extra-stat" style="display:none">Attunement: 1337</div>
+                    <div id="power" class="extra-stat" style="display:none">Power: 1337</div>
                 </div>
             </div>
 
