Power and attunement in end run summary

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <p>Half your items will disappear.</p>
                 <p>You keep all your Skills and Perks.</p>
                 <button id="game-over-dismiss">Restart</button>
-                <h3>Skills gained during run:</h3>
+                <h3>Gained during run:</h3>
                 <div id="game-over-skillgain"></div>
                 <h3 id="game-over-reset-count"></h3>
             </div>
