Minor text tweaks

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <div id="game-over-overlay" style="display:none" class="full-screen-overlay">
             <div id="game-over-box">
                 <h2 id=>Game Over</h2>
-                <p>You used up all your energy.</p>
-                <p>Half your items will disappear.</p>
+                <p>You used up all your Energy.</p>
+                <p>Half your Items will disappear.</p>
                 <p>You keep all your Skills and Perks.</p>
                 <button id="game-over-dismiss">Restart</button>
                 <h3>Gained during run:</h3>
