Moved skills and such to a sidebar
Allows for moderately smaller viewports

--- a/index.html
+++ b/index.html
@@ -10,44 +10,45 @@
     <!-- Hidden until game's ready to render -->
     <main>
         <div id="game-area" style="display:none">
-            <div id="top-area">
-                <div id="top-bar">
-                    <div id="energy">
-                        <span class="label"></span>
-                        <div class="progress-bar">
-                            <div class="progress-fill"></div>
-                            <span class="progress-value">100</span>
+            <div id="sidebar">
+                <button id="open-settings">⚙ Settings</button>
+                <div id="attunement" class="sidebar-item item-text" style="display:none">🌀Attunement: 1337</div>
+                <div id="power" class="sidebar-item item-text" style="display:none">💪Power: 1337</div>
+                <div id="skills"></div>
+            </div>
+            <div id="main-bar">
+                <div id="top-area">
+                    <div id="top-bar">
+                        <div id="energy">
+                            <span class="label"></span>
+                            <div class="progress-bar">
+                                <div class="progress-fill"></div>
+                                <span class="progress-value">100</span>
+                            </div>
                         </div>
                     </div>
-                    <div id="skills"></div>
                 </div>
 
-                <div id="right-top-area">
-                    <button id="open-settings">⚙</button>
-                    <div id="attunement" class="extra-stat" style="display:none">🌀Attunement: 1337</div>
-                    <div id="power" class="extra-stat" style="display:none">💪Power: 1337</div>
-                </div>
-            </div>
-
-            <div id="play-area">
-                <div id="left-column">
-                    <div id="tasks"></div>
-                </div>
-                <div id="right-column">
-                    <h2 id="zone-name">Lorem Ipsum</h2>
-                    <div id="controls" class="sidebar-section">
-                        <h3 class="section-name">Controls</h3>
-                        <div id="controls-list" class="elements-list"></div>
+                <div id="play-area">
+                    <div id="left-column">
+                        <div id="tasks"></div>
                     </div>
-                    <div id="items" class="sidebar-section">
-                        <h3 class="section-name">Items</h3>
-                        <h3 class="section-info">?</h3>
-                        <div id="items-list" class="elements-list"></div>
-                    </div>
-                    <div id="perks" class="sidebar-section">
-                        <h3 class="section-name">Perks</h3>
-                        <h3 class="section-info">?</h3>
-                        <div id="perks-list" class="elements-list"></div>
+                    <div id="right-column">
+                        <h2 id="zone-name">Lorem Ipsum</h2>
+                        <div id="controls" class="sidebar-section">
+                            <h3 class="section-name">Controls</h3>
+                            <div id="controls-list" class="elements-list"></div>
+                        </div>
+                        <div id="items" class="sidebar-section">
+                            <h3 class="section-name">Items</h3>
+                            <h3 class="section-info">?</h3>
+                            <div id="items-list" class="elements-list"></div>
+                        </div>
+                        <div id="perks" class="sidebar-section">
+                            <h3 class="section-name">Perks</h3>
+                            <h3 class="section-info">?</h3>
+                            <div id="perks-list" class="elements-list"></div>
+                        </div>
                     </div>
                 </div>
             </div>
