--- a/index.html
+++ b/index.html
@@ -17,18 +17,6 @@
                 <div id="skills"></div>
             </div>
             <div id="main-bar">
-                <div id="top-area">
-                    <div id="top-bar">
-                        <div id="energy">
-                            <span class="label"></span>
-                            <div class="progress-bar">
-                                <div class="progress-fill"></div>
-                                <span class="progress-value">100</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
                 <div id="play-area">
                     <div id="left-column">
                         <div id="tasks"></div>
@@ -48,6 +36,17 @@
                             <h3 class="section-name">Perks</h3>
                             <h3 class="section-info">?</h3>
                             <div id="perks-list" class="elements-list"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Down here so it'll be on-top without messing with the z-index -->
+                <div id="top-area">
+                    <div id="energy">
+                        <span class="label"></span>
+                        <div class="progress-bar">
+                            <div class="progress-fill"></div>
+                            <span class="progress-value">100</span>
                         </div>
                     </div>
                 </div>
